[package]
name = "diskspace"
version = "2.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "diskspace"
path = "src/main.rs"

[[bin]]
name = "bitbar-diskspace"
path = "src/bitbar.rs"

[dependencies]
bytesize = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
systemstat = "0.2"
thiserror = "1"
xdg-basedir = "1"

[dependencies.bitbar]
version = "0.8"
features = ["base64"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
