[package]
name = "diskspace"
version = "2.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[build-dependencies]
winres = "0.1"

[[bin]]
name = "diskspace"
path = "src/main.rs"

[[bin]]
name = "bitbar-diskspace"
path = "src/bitbar.rs"

[[bin]]
name = "systray-diskspace"
path = "src/systray.rs"

[dependencies]
bitbar = { version = "0.8", features = ["base64"] }
bytesize = "1"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12.1"
registry = "1.2.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
systemstat = "0.2"
thiserror = "1"
tokio = { version = "1.33.0", features = ["time", "sync", "parking_lot"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
xdg-basedir = "1"

[target.'cfg(windows)'.dependencies]
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", default-features = false, features = ["tray-notification", "high-dpi", "cursor", "message-window", "menu", "notice"] }
